feat(api): agregar endpoint para creación de fabricante y configuración de autenticación JWT
- Se actualizó '.gitignore' para ignorar archivos de Visual Studio.
- Se agregó el record 'CrearFabricanteRequest' para los datos del fabricante.
- Se introdujo la clase 'ComprasEndpoints' para mapear el endpoint POST.
- Se configuró la autenticación JWT y CORS en 'Program.cs'.
- Se modificó 'launchSettings.json' para los ajustes de desarrollo local.
- Se actualizó el archivo de proyecto para apuntar a .NET 9.0 e incluir el paquete de JWT.
- Se agregó un ejemplo de solicitud HTTP para probar el nuevo endpoint.
- Se crearon/actualizaron configuraciones de logging en los archivos 'appsettings'.
- Se actualizó el archivo de solución para incluir las nuevas configuraciones del proyecto.

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,8 @@ UI/package-lock.json
 /Infraestructura/.terraform.lock.hcl
 **/.idea/
 *.user
+/.vs/ProyectoIntegrador2/CopilotIndices/17.13.444.19527
+/.vs/ProyectoIntegrador2/FileContentIndex
+/.vs/ProyectoIntegrador2/v17
+/Backend/StoreFlow.Compras/.vs
+/.vs
