--- a/Backend/StoreFlow.Compras/StoreFlow.Compras.API/StoreFlow.Compras.API.csproj
+++ b/Backend/StoreFlow.Compras/StoreFlow.Compras.API/StoreFlow.Compras.API.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.4" />
+    <PackageReference Include="MiniValidation" Version="0.9.2" />
   </ItemGroup>
 
 </Project>
