feat(api): agregar IFabricantesService y actualizar configuración de base de datos
- Se actualizó 'Program.cs' para incluir 'IFabricantesService' y mejorar la inyección de dependencias.
- Se modificó 'CONNECTION_STRING_COMPRAS' en 'launchSettings.json' con una cadena de conexión válida a PostgreSQL y se actualizó 'JWT_SECRET'.
- Se añadió el servicio 'dbcompras' en 'docker-compose.yaml' para la configuración de la base de datos PostgreSQL con verificaciones de estado.

--- a/Backend/StoreFlow.Compras/StoreFlow.Compras.API/Properties/launchSettings.json
+++ b/Backend/StoreFlow.Compras/StoreFlow.Compras.API/Properties/launchSettings.json
@@ -8,8 +8,8 @@
       "applicationUrl": "http://localhost:5038",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "CONNECTION_STRING_COMPRAS": "xxx",
-        "JWT_SECRET": "xxx"
+        "CONNECTION_STRING_COMPRAS": "Host=localhost;Port=5434;Username=postgres;Password=postgres;Database=compras",
+        "JWT_SECRET": "q9zM3u9Y5xUq4OEt5nq3P9+0uOaIxQeH+dE68Z8+WBA="
       }
     }
   }
