--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,6 +26,22 @@ services:
     depends_on:
       dbusuarios:
         condition: service_healthy
+
+  dbcompras:
+    image: postgres
+    container_name: dbcompras
+    restart: always
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: compras
+    ports:
+        - "5434:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     
   mobileapp:
     build:
