--- a/UI/apps/mobile/project.json
+++ b/UI/apps/mobile/project.json
@@ -46,7 +46,13 @@
               "maximumError": "8kb"
             }
           ],
-          "outputHashing": "all"
+          "outputHashing": "all",
+          "fileReplacements": [
+            {
+              "replace": "apps/mobile/src/environments/environment.ts",
+              "with": "apps/mobile/src/environments/environment.prod.ts"
+            }
+          ]
         },
         "development": {
           "optimization": false,
