--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 CONNECTION_STRING="Host=dbusuarios;Port=5432;Username=postgres;Password=postgres;Database=usuarios"
 JWT_SECRET=q9zM3u9Y5xUq4OEt5nq3P9+0uOaIxQeH+dE68Z8+WBA=
+CONNECTION_STRING_COMPRAS="Host=dbcompras;Port=5432;Username=postgres;Password=postgres;Database=compras"
