--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,6 +42,18 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+
+  compras:
+    build: 
+      context: Backend/StoreFlow.Compras
+      dockerfile: \StoreFlow.Compras.API/Dockerfile 
+    env_file:
+      - .env
+    ports:
+      - '8091:8080' 
+    depends_on:
+      dbcompras:
+        condition: service_healthy      
     
   mobileapp:
     build:
