Feature/hu001 back registro fabricante individual (#35)
* feat(api): agregar endpoint para creación de fabricante y configuración de autenticación JWT

- Se actualizó '.gitignore' para ignorar archivos de Visual Studio.
- Se agregó el record 'CrearFabricanteRequest' para los datos del fabricante.
- Se introdujo la clase 'ComprasEndpoints' para mapear el endpoint POST.
- Se configuró la autenticación JWT y CORS en 'Program.cs'.
- Se modificó 'launchSettings.json' para los ajustes de desarrollo local.
- Se actualizó el archivo de proyecto para apuntar a .NET 9.0 e incluir el paquete de JWT.
- Se agregó un ejemplo de solicitud HTTP para probar el nuevo endpoint.
- Se crearon/actualizaron configuraciones de logging en los archivos 'appsettings'.
- Se actualizó el archivo de solución para incluir las nuevas configuraciones del proyecto.

* feat(validación): agregar validaciones a CrearFabricanteRequest y a los endpoints

- Se mejoró 'CrearFabricanteRequest' con atributos de validación para 'Nombre' y 'CorreoElectronico'.
- Se integró 'MiniValidation' para la validación en los endpoints dentro de 'MapComprasEndpoints'.
- Se actualizó el archivo de proyecto para incluir la referencia al paquete 'MiniValidation'.
- Se modificó el payload JSON en el archivo HTTP para alinearse con los nombres de propiedad actualizados.

* feat(fabricantes): agregar funcionalidad para gestión de fabricantes

- Se introdujo el record 'CrearFabricanteResponse' para los datos de respuesta.
- Se actualizó 'ComprasDbContext' para incluir 'DbSet<Fabricante>'.
- Se definió la clase 'Fabricante' con atributos de validación.
- Se crearon archivos de migración para la configuración de la tabla 'Fabricantes'.
- Se configuró la aplicación para usar PostgreSQL y ejecutar migraciones al iniciar.
- Se implementó 'FabricantesService' para la creación asincrónica de fabricantes.
- Se definió la interfaz 'IFabricantesService' como contrato del servicio.
- Se actualizaron los archivos de proyecto y solución con

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,6 +26,34 @@ services:
     depends_on:
       dbusuarios:
         condition: service_healthy
+
+  dbcompras:
+    image: postgres
+    container_name: dbcompras
+    restart: always
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: compras
+    ports:
+        - "5434:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  compras:
+    build: 
+      context: Backend/StoreFlow.Compras
+      dockerfile: StoreFlow.Compras.API/Dockerfile 
+    env_file:
+      - .env
+    ports:
+      - '8091:8080' 
+    depends_on:
+      dbcompras:
+        condition: service_healthy      
     
   mobileapp:
     build:
