feat(cd): agregar el servicio Gateway al pipeline de CI/CD
- Se actualizó el pipeline de CI/CD en 'cd.yml' para incluir un nuevo job que construye y publica una imagen Docker del servicio Gateway.
- Se añadieron pasos para actualizar la imagen del Gateway en AKS y limpiar imágenes antiguas del registro de paquetes.
- Se modificó el 'Dockerfile' de la aplicación web para soportar argumentos de entorno y se cambió la imagen base a 'nginx:stable-alpine'.
- Se agregó un archivo de configuración personalizado para Nginx.
- Se actualizó 'docker-compose.yaml' para incluir nuevos servicios de la aplicación web y del Gateway, especificando sus contextos de construcción y puertos.
- Se creó un nuevo Deployment y un Service de Kubernetes para el Gateway en 'deployment.yaml' y 'service.yaml', respectivamente.
- Se definió un recurso Ingress en 'ingress-gateway.yaml' para el acceso externo al servicio Gateway.

--- a/UI/apps/web/Dockerfile
+++ b/UI/apps/web/Dockerfile
@@ -12,7 +12,8 @@ COPY libs ./libs
 
 RUN npm install --include=optional
 
-RUN npx nx build web --configuration=production
+ARG ENVIRONMENT=production
+RUN npx nx build web --configuration=$ENVIRONMENT
 
 FROM nginx:alpine
 
