--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -82,6 +82,18 @@ jobs:
             ${{ env.REGISTRY }}/${{ env.LOWERCASE_PREFIX }}/compras:${{ env.VERSION }}
             ${{ env.REGISTRY }}/${{ env.LOWERCASE_PREFIX }}/compras:latest
 
+      - name: Build and push Gateway
+        uses: docker/build-push-action@v4
+        with:
+          context: ./Gateway
+          file: ./Gateway/Dockerfile
+          platforms: linux/amd64
+          push: true
+          provenance: false
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.LOWERCASE_PREFIX }}/gateway:${{ env.VERSION }}
+            ${{ env.REGISTRY }}/${{ env.LOWERCASE_PREFIX }}/gateway:latest      
+
   deploy-to-aks:
     needs: build-and-push
     runs-on: ubuntu-latest
@@ -125,6 +137,11 @@ jobs:
         run: |
           kubectl set image deployment/compras compras=${{ env.REGISTRY }}/${{ env.LOWERCASE_PREFIX }}/compras:${{ env.VERSION }} -n storeflow
 
+      - name: Update gateway image in AKS
+        if: env.AKS_EXISTS == 'true'
+        run: |
+          kubectl set image deployment/gateway gateway=${{ env.REGISTRY }}/${{ env.LOWERCASE_PREFIX }}/gateway:${{ env.VERSION }} -n storeflow          
+
   cleanup:
     needs: build-and-push
     runs-on: ubuntu-latest
@@ -160,6 +177,16 @@ jobs:
         uses: actions/delete-package-versions@v4
         with:
           package-name: '${{ env.REPO_NAME }}/compras'
+          package-type: 'container'
+          min-versions-to-keep: 3
+          delete-only-untagged-versions: false
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Delete old Gateway images
+        continue-on-error: true
+        uses: actions/delete-package-versions@v4
+        with:
+          package-name: '${{ env.REPO_NAME }}/gateway'
           package-type: 'container'
           min-versions-to-keep: 3
           delete-only-untagged-versions: false
