--- a/k8s/gateway/deployment.yaml
+++ b/k8s/gateway/deployment.yaml
@@ -15,6 +15,6 @@ spec:
     spec:
       containers:
         - name: gateway
-          image: ghcr.io/miso-proyecto-final-grupo-20/proyectointegrador2/gateway:latest # Cambia esto si usas otra imagen o tag
+          image: ghcr.io/miso-proyecto-final-grupo-20/proyectointegrador2/gateway:latest 
           ports:
             - containerPort: 80
