Feature/api gateway (#39)
* feat(cd): agregar el servicio Gateway al pipeline de CI/CD

- Se actualizó el pipeline de CI/CD en 'cd.yml' para incluir un nuevo job que construye y publica una imagen Docker del servicio Gateway.
- Se añadieron pasos para actualizar la imagen del Gateway en AKS y limpiar imágenes antiguas del registro de paquetes.
- Se modificó el 'Dockerfile' de la aplicación web para soportar argumentos de entorno y se cambió la imagen base a 'nginx:stable-alpine'.
- Se agregó un archivo de configuración personalizado para Nginx.
- Se actualizó 'docker-compose.yaml' para incluir nuevos servicios de la aplicación web y del Gateway, especificando sus contextos de construcción y puertos.
- Se creó un nuevo Deployment y un Service de Kubernetes para el Gateway en 'deployment.yaml' y 'service.yaml', respectivamente.
- Se definió un recurso Ingress en 'ingress-gateway.yaml' para el acceso externo al servicio Gateway.

* refactor(deployment): actualizar especificación de imagen del gateway

- Se eliminaron los comentarios de la línea de imagen del gateway en 'deployment.yaml'.
- Se eliminaron completamente las configuraciones de ingress para los servicios 'compras' y 'usuarios' en 'ingress-compras.yaml' e 'ingress-usuarios.yaml', respectivamente.

* fix(service): actualizar configuración de puertos para compras y usuarios

- Se modificó la configuración en 'service.yaml' para los servicios 'compras' y 'usuarios'.
- Se eliminó el puerto 80 existente y se añadió un nuevo puerto 8080, incluyendo un 'targetPort' con valor 8080.

--- a/k8s/gateway/service.yaml
+++ b/k8s/gateway/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: compras
+  name: gateway
   namespace: storeflow
 spec:
   type: ClusterIP
   selector:
-    app: compras
+    app: gateway
   ports:
-    - port: 8080
-      targetPort: 8080
+    - port: 80
+      targetPort: 80
