--- a/k8s/ingress/ingress-gateway.yaml
+++ b/k8s/ingress/ingress-gateway.yaml
@@ -1,20 +1,19 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: compras-ingress
+  name: apigateway-ingress
   namespace: storeflow
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   ingressClassName: nginx
   rules:
     - http:
         paths:
-          - path: /compras(/|$)(.*)
+          - path: /api(/|$)(.*)
             pathType: ImplementationSpecific
             backend:
               service:
-                name: compras
+                name: gateway
                 port:
                   number: 80
