Configuración del nginx y k8s para ventas

--- a/Gateway/nginx.conf
+++ b/Gateway/nginx.conf
@@ -19,6 +19,10 @@ http {
         server compras:8080;
     }
 
+    upstream ventas_api {
+        server ventas:8080;
+    }
+
     server {
         listen 80;
 
@@ -32,6 +36,13 @@ http {
         location /api/compras/ {
             proxy_pass http://compras_api/;
             rewrite ^/api/compras/(.*)$ /$1 break;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+
+        location /api/ventas/ {
+            proxy_pass http://ventas_api/;
+            rewrite ^/api/ventas/(.*)$ /$1 break;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
