feat(api): agregar funcionalidad de creación de productos y pruebas
- Se actualizó '.gitignore' para excluir 'UI/package-lock.json' y los directorios '.vs'.
- Se agregaron los registros 'CrearProductoRequest' y 'CrearProductoResponse' para la creación de productos.
- Se introdujo 'DbSet<Producto>' en 'ComprasDbContext' y se actualizaron las relaciones del modelo.
- Se implementó el endpoint de creación de productos en 'MapComprasEndpoints' con validación.
- Se estableció la relación entre 'Fabricante' y 'Producto' en 'Fabricante.cs'.
- Se creó la clase 'Producto' con atributos de validación.
- Se añadió la clase de error 'SkuYaExiste' para el manejo de conflictos de SKU.
- Se generaron archivos de migración para la nueva tabla 'Productos'.
- Se actualizó 'ComprasDbContextModelSnapshot' para reflejar la nueva entidad.
- Se modificó 'Program.cs' para registrar servicios y configurar la autenticación.
- Se definió la interfaz 'IProductosService' y se implementó en 'ProductosService'.
- Se agregaron pruebas unitarias para la creación de productos en 'ProductosEndpointTests' y 'ProductoServiceTests'.
- Se ajustó 'TestApplicationFactory' para la configuración del entorno de pruebas y JWT.

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ UI/package-lock.json
 /Backend/StoreFlow.Compras/.vs
 /.vs
 /Backend/StoreFlow.Compras/TestResults
+/Backend/StoreFlow.Usuarios/.vs/StoreFlow.Usuarios
