--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,19 +17,19 @@ jobs:
     runs-on: ubuntu-latest
     
     services:
-      postgres:
-        image: postgres:15
-        ports:
-          - 5432:5432
-        env:
-          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
-          POSTGRES_USER: postgres
-          POSTGRES_DB: ventas
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+      # postgres:
+      #   image: postgres:15
+      #   ports:
+      #     - 5432:5432
+      #   env:
+      #     POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+      #     POSTGRES_USER: postgres
+      #     POSTGRES_DB: ventas
+      #   options: >-
+      #     --health-cmd pg_isready
+      #     --health-interval 10s
+      #     --health-timeout 5s
+      #     --health-retries 5
           
       rabbitmq:
         image: rabbitmq:3-management
@@ -47,20 +47,20 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install PostgreSQL client tools
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y postgresql-client
+      # - name: Install PostgreSQL client tools
+      #   run: |
+      #     sudo apt-get update
+      #     sudo apt-get install -y postgresql-client
           
-      - name: Wait for PostgreSQL to be ready
-        run: |
-          echo "Waiting for PostgreSQL to be fully operational..."
-          until pg_isready -h localhost -U postgres
-          do
-            echo "PostgreSQL is still initializing. Waiting..."
-            sleep 5
-          done
-          echo "PostgreSQL is now operational."
+      # - name: Wait for PostgreSQL to be ready
+      #   run: |
+      #     echo "Waiting for PostgreSQL to be fully operational..."
+      #     until pg_isready -h localhost -U postgres
+      #     do
+      #       echo "PostgreSQL is still initializing. Waiting..."
+      #       sleep 5
+      #     done
+      #     echo "PostgreSQL is now operational."
           
       - name: Setup .Net Core 9.0.x
         uses: actions/setup-dotnet@v1
