Parametrización del docker compose y el k8s

--- a/Gateway/nginx.conf
+++ b/Gateway/nginx.conf
@@ -23,6 +23,10 @@ http {
         server ventas:8080;
     }
 
+    upstream inventarios_api {
+        server ventas:8080;
+    }
+
     server {
         listen 80;
 
@@ -46,5 +50,13 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
+
+        location /api/inventarios/ {
+            proxy_pass http://inventarios_api/;
+            rewrite ^/api/inventarios/(.*)$ /$1 break;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+
     }
 }
