--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ CONNECTION_STRING="Host=dbusuarios;Port=5432;Username=postgres;Password=postgres
 JWT_SECRET=q9zM3u9Y5xUq4OEt5nq3P9+0uOaIxQeH+dE68Z8+WBA=
 CONNECTION_STRING_COMPRAS="Host=dbcompras;Port=5432;Username=postgres;Password=postgres;Database=compras"
 CONNECTION_STRING_VENTAS="Host=dbventas;Port=5432;Username=postgres;Password=postgres;Database=ventas"
+CONNECTION_STRING_INVENTARIOS="Host=dbventas;Port=5432;Username=postgres;Password=postgres;Database=inventarios"
