Correcciones de cadenas de conexión y dependencias de inventarios

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -108,7 +108,7 @@ services:
     ports:
       - '8093:8080' 
     depends_on:
-      dbventas:
+      dbinventarios:
         condition: service_healthy
     
   mobileapp:
