feat(api): agregar endpoints y DTOs para fabricantes
- Se actualizó '.gitignore' para excluir rutas adicionales del proyecto.
- Se introdujo 'FabricanteDto' para la representación de fabricantes.
- Se agregaron nuevos endpoints HTTP GET y POST en 'MapComprasEndpoints.cs' para la gestión de fabricantes y productos con autorización.
- Se modificó 'FabricantesService.cs' para incluir EF Core y se añadió el método 'ObtenerListadoAsync' para obtener fabricantes.
- Se actualizó la interfaz 'IFabricantesService' en consecuencia.
- Se mejoraron las pruebas en 'FabricantesEndpointTests.cs' y 'FabricanteServiceTests.cs' para los nuevos endpoints y métodos.
- Se ajustó 'TestApplicationFactory.cs' para usar nombres de base de datos dinámicos en pruebas.
- Se actualizaron las URLs en 'productos.urls.ts' para coincidir con la nueva estructura de la API.
- Se cambió el tipo de entrada en 'registrar-productos.component.html' de número a texto.

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ UI/package-lock.json
 /.vs
 /Backend/StoreFlow.Compras/TestResults
 /Backend/StoreFlow.Usuarios/.vs/StoreFlow.Usuarios
+/Backend/StoreFlow.Usuarios/.vs/ProjectEvaluation
