chore: actualizar '.gitignore' y agregar atributos de cobertura de código
- Se actualizó '.gitignore' para incluir 'package-lock.json'.
- Se añadió la directiva 'using System.Diagnostics.CodeAnalysis' y el atributo '[ExcludeFromCodeCoverage]' a las clases 'CreaTablaProductos' y 'ComprasDbContextModelSnapshot'.
- Se modificó 'launchSettings.json' para agregar un nuevo perfil para 'StoreFlow.Ventas.API' con la configuración correspondiente.

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ UI/package-lock.json
 /Backend/StoreFlow.Compras/TestResults
 /Backend/StoreFlow.Usuarios/.vs/StoreFlow.Usuarios
 /Backend/StoreFlow.Usuarios/.vs/ProjectEvaluation
+/Backend/.vs/StoreFlow
